// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should handle invalid reply ids 1`] = `
Object {
  "data": Object {
    "foundArticleIds": Array [
      "AWDZYXxAyCdS-nWhumlz",
      "5483323992880-rumor",
      "AV-Urc0jyCdS-nWhuity",
      "AVsh8u7StKp96s659Dgq",
    ],
    "foundReplyIds": Array [
      "AWDZeeV0yCdS-nWhuml8",
    ],
    "searchedText": "貼圖",
    "selectedArticleId": "AWDZYXxAyCdS-nWhumlz",
  },
  "event": Object {
    "input": "123",
    "timestamp": 1518964687709,
    "type": "text",
  },
  "isSkipUser": false,
  "issuedAt": 1518964688672,
  "replies": Array [
    Object {
      "text": "請輸入 1～1 的數字，來選擇回應。",
      "type": "text",
    },
  ],
  "state": "CHOOSING_REPLY",
  "userId": "Uaddc74df8a3a176b901d9d648b0fc4fe",
}
`;

exports[`should select reply by replyId should handle the case with just one reply 1`] = `
Object {
  "data": Object {
    "foundArticleIds": Array [
      "AWDZYXxAyCdS-nWhumlz",
      "5483323992880-rumor",
      "AV-Urc0jyCdS-nWhuity",
      "AVsh8u7StKp96s659Dgq",
    ],
    "foundReplyIds": Array [
      "AWDZeeV0yCdS-nWhuml8",
    ],
    "searchedText": "貼圖",
    "selectedArticleId": "AWDZYXxAyCdS-nWhumlz",
    "selectedReplyId": "AWDZeeV0yCdS-nWhuml8",
  },
  "event": Object {
    "input": 1,
    "postback": Object {
      "data": "{\\"input\\":1,\\"issuedAt\\":1518964675191}",
    },
    "timestamp": 1518964687709,
    "type": "postback",
  },
  "isSkipUser": false,
  "issuedAt": 1518964688672,
  "replies": Array [
    Object {
      "text": "💡 網路上有人這樣回應這則訊息：",
      "type": "text",
    },
    Object {
      "text": "這是商業活動廣告01 這是商業活動廣告02 這是商業活動廣告03 這是商業活動廣告04 這是商業活動廣告05 這是商業活動廣告06 這是商業活動廣告07 這是商業活動廣告08 這是商業活動廣告09 這是商業活動廣告10 這是商業活動廣告11 這是商業活動廣告12 這是商業活動廣告13 這是商業活動廣告14 這是商業活動廣告15 這是商業活動廣告16 這是商業活動廣告17 這是商業活動廣告18 這是商業活動廣告19 這是商業活動廣告20",
      "type": "text",
    },
    Object {
      "text": "􀂅 ⚠️️ This reply has no references and it may be biased ⚠️️  􀂅",
      "type": "text",
    },
    Object {
      "text": "⬆️ 綜合以上，回應者認為它Invalid request。

💁 以上資訊由好心人提供。請斟酌出處與理由思考判斷。

⁉️ 如果你對這則訊息有不同看法，歡迎到下面這裡寫入新的回應：
https://cofacts.hacktabl.org/article/AWDZYXxAyCdS-nWhumlz",
      "type": "text",
    },
    Object {
      "altText": "請問上面回應是否有幫助？
「是」請輸入「y」，「否」請至手機上回應",
      "template": Object {
        "actions": Array [
          Object {
            "data": "{\\"input\\":\\"y\\",\\"issuedAt\\":1518964688672}",
            "label": "是",
            "type": "postback",
          },
          Object {
            "label": "否",
            "type": "uri",
            "uri": "line://app/1631030389-xb5mnDdN?state=ASKING_REPLY_FEEDBACK&text=%E9%80%99%E6%98%AF%E5%95%86%E6%A5%AD%E6%B4%BB%E5%8B%95%E5%BB%A3%E5%91%8A%E2%8B%AF%E2%8B%AF&prefix=%F0%9F%92%A1%20I%20think%20the%20reply%20is%20not%20useful%20and%20I%20suggest%3A%0A&issuedAt=1518964688672",
          },
        ],
        "text": "請問上面回應是否有幫助？",
        "type": "confirm",
      },
      "type": "template",
    },
  ],
  "state": "ASKING_REPLY_FEEDBACK",
  "userId": "Uaddc74df8a3a176b901d9d648b0fc4fe",
}
`;

exports[`should select reply by replyId should handle the case with multiple replues 1`] = `
Object {
  "data": Object {
    "foundArticleIds": Array [
      "AWDZYXxAyCdS-nWhumlz",
      "5483323992880-rumor",
      "AV-Urc0jyCdS-nWhuity",
      "AVsh8u7StKp96s659Dgq",
    ],
    "foundReplyIds": Array [
      "AWDZeeV0yCdS-nWhuml8",
      "BVDZeeV0yCdS-nWhuml8",
    ],
    "searchedText": "貼圖",
    "selectedArticleId": "AWDZYXxAyCdS-nWhumlz",
    "selectedReplyId": "AWDZeeV0yCdS-nWhuml8",
  },
  "event": Object {
    "input": 1,
    "postback": Object {
      "data": "{\\"input\\":1,\\"issuedAt\\":1518964675191}",
    },
    "timestamp": 1518964687709,
    "type": "postback",
  },
  "isSkipUser": false,
  "issuedAt": 1518964688672,
  "replies": Array [
    Object {
      "text": "💡 網路上有人這樣回應這則訊息：",
      "type": "text",
    },
    Object {
      "text": "這是商業活動廣告01 這是商業活動廣告02 這是商業活動廣告03 這是商業活動廣告04 這是商業活動廣告05 這是商業活動廣告06 這是商業活動廣告07 這是商業活動廣告08 這是商業活動廣告09 這是商業活動廣告10 這是商業活動廣告11 這是商業活動廣告12 這是商業活動廣告13 這是商業活動廣告14 這是商業活動廣告15 這是商業活動廣告16 這是商業活動廣告17 這是商業活動廣告18 這是商業活動廣告19 這是商業活動廣告20",
      "type": "text",
    },
    Object {
      "text": "􀂅 ⚠️️ This reply has no references and it may be biased ⚠️️  􀂅",
      "type": "text",
    },
    Object {
      "text": "⬆️ 綜合以上，回應者認為它Invalid request。

💁 以上資訊由好心人提供。請斟酌出處與理由思考判斷。
🗣️ 這則訊息有很多不同回應，建議到這裡一次讀完再下判斷：
https://cofacts.hacktabl.org/article/AWDZYXxAyCdS-nWhumlz

⁉️ 如果你對這則訊息有不同看法，歡迎到下面這裡寫入新的回應：
https://cofacts.hacktabl.org/article/AWDZYXxAyCdS-nWhumlz",
      "type": "text",
    },
    Object {
      "altText": "請問上面回應是否有幫助？
「是」請輸入「y」，「否」請至手機上回應",
      "template": Object {
        "actions": Array [
          Object {
            "data": "{\\"input\\":\\"y\\",\\"issuedAt\\":1518964688672}",
            "label": "是",
            "type": "postback",
          },
          Object {
            "label": "否",
            "type": "uri",
            "uri": "line://app/1631030389-xb5mnDdN?state=ASKING_REPLY_FEEDBACK&text=%E9%80%99%E6%98%AF%E5%95%86%E6%A5%AD%E6%B4%BB%E5%8B%95%E5%BB%A3%E5%91%8A%E2%8B%AF%E2%8B%AF&prefix=%F0%9F%92%A1%20I%20think%20the%20reply%20is%20not%20useful%20and%20I%20suggest%3A%0A&issuedAt=1518964688672",
          },
        ],
        "text": "請問上面回應是否有幫助？",
        "type": "confirm",
      },
      "type": "template",
    },
  ],
  "state": "ASKING_REPLY_FEEDBACK",
  "userId": "Uaddc74df8a3a176b901d9d648b0fc4fe",
}
`;
